# Artificial-Planeswalker

./: .env.example  .gitignore  .mcp.json  .mcpbignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PROJECTIDEA.md  README.md  RELEASE-STRATEGY.md  SATHIAS.md  SECURITY.md  SPIDER_MAN_INVESTIGATION.md  TODO-LIST.md  TOOL_PERFORMANCE_REPORT.md  manifest.json  pyproject.toml  setup.py
.agents/plugins/: marketplace.json
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.letta/: settings.local.json
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-repository-restructure-dependency-reshape.md  1-2-sqlite-connectionfactory-with-wal-extension-loading.md  1-3-fastmcp-server-with-card-lookup-bug-report.md  1-4-advanced-card-search-tool.md  1-5-deck-management-tools.md  1-6-deck-analysis-tools.md  2-1-embedder-port-fastembed-singleton-persistent-cache.md  2-2-card-vec-schema-with-metadata-columns.md  2-3-card-embedding-index-builder-idempotent-incremental.md  2-4-semantic-search-cards-tool-hybrid-query.md  2-5-find-similar-cards-tool.md  2-6-rag-sanity-eval.md  3-1-magic-deckbuilding-orchestrator-skill.md  3-2-synergy-discovery-skill.md  3-3-mana-curve-analysis-skill.md  3-4-format-legality-skill.md  4-1-add-the-nullable-game-changer-field-end-to-end.md  4-2-migrate-and-backfill-existing-databases.md  5-1-compose-the-calibration-benchmark-set.md  5-2-format-profile-frozen-data-module.md  5-3-shared-oracle-text-classifiers.md  5-4-mana-base-curve-signals.md  5-4-proactive-synergy-suggestions.md  5-5-consistency-interaction-structural-coverage-signals.md  5-6-combo-record-combo-bracket-mapping.md  5-7-dimension-vector-commander-bracket-floor-cedh-candidacy.md  5-8-for-format-aggregate-tier-label-standard-fork-confidence-vocabulary.md  5-9-pure-score-entry-point-benchmark-validation.md  6-1-commander-flag-end-to-end.md  6-2-spellbook-bulk-combo-snapshot-import.md  6-3-combo-snapshot-repository.md  7-1-register-the-async-tool-load-deck-resolve-format.md  7-2-combo-provisioning-the-degradation-ladder.md  7-3-assess-deck-power-result-assembly-deterministic-serialization-human-summary.md  7-4-end-to-end-tool-test-determinism-diff-regression.md  7-5-compare-deck-power-tool.md  deferred-work.md  epic-1-retro-2026-06-21.md  epic-2-retro-2026-06-24.md  epic-3-retro-2026-06-27.md  (+26 more)
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics-deck-power-assessment.md  epics.md  implementation-readiness-report-2026-07-11.md  prd.md  sprint-change-proposal-2026-07-12.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: BUG_REPORT_MANAGEMENT.md  CONTEXT_DESIGN.md  LOGFIRE.md  SESSION_DEBUGGING_GUIDE.md  actions.md  architecture.md  companion-app-feature-brief.md  conversation-history-requirements.md  deck-assess.md  performance.md  plugin-structure.md  project-index.md  project-scan-report.json  release-readiness-review.md  test-failure-analysis.md
examples/advanced_search/: 01_repository_search.py  02_real_cards_search.py  03_agent_natural_language.py  README.md
legacy/agent/: __init__.py  core.py  dependencies.py  errors.py  retry.py
legacy/tests/: conftest.py
legacy/ui/: __init__.py  app.py  formatters.py  tool_steps.py
openspec/: project.md
plugin/: .mcp.json  codex-mcp.json
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/server/: NOTICE  README.md  pyproject.toml
plugin/server/src/: __init__.py
plugin/server/src/data/: __init__.py  database.py
plugin/server/src/data/importers/: aggregate.py  importer.py  parser.py  scryfall.py  scryfall_api.py  spellbook.py  spellbook_api.py  transformers.py
plugin/server/src/data/models/: card.py  combo.py  deck_card.py
plugin/server/src/data/repositories/: __init__.py  combo_snapshot.py  deck.py
plugin/server/src/data/schemas/: __init__.py  combo.py  deck.py
plugin/server/src/logic/: __init__.py
plugin/server/src/logic/assessment/: __init__.py  aggregate.py  classifiers.py  combos.py  dimensions.py  mana_base.py  profiles.py  scorer.py
plugin/server/src/mcp_server/: __init__.py  server.py
plugin/server/src/mcp_server/tools/: __init__.py  assess_deck_power.py  build_search_index.py  card_lookup.py  deck_analysis.py  deck_import.py  initialize_database.py  semantic_search.py
plugin/server/src/search/: __init__.py  connection.py  index_builder.py  query.py  schema.py
plugin/server/src/viewer/: template.html
public/: card-hover.js  combined-styles.css
scripts/: __init__.py  build_card_embeddings.py  build_plugin.py  import_scryfall_data.py  import_spellbook_combos.py  manage_bug_reports.py  migrate_add_bug_reports.py  migrate_add_card_vec.py  migrate_add_deck_card_commander.py  migrate_add_deck_strategy.py  migrate_add_game_changer.py  migrate_add_power_toughness.py  migrate_deck_fields.py  test_agent.py  test_api_connection.py  test_database_setup.py  test_mini_import.py  test_queries.py  validate_data_layer.py  verify_image_data.py  view_deck.py
src/: paths.py
src/agent/: config.py  core.py  dependencies.py
src/data/: database.py  import_state.py
src/logic/: deck_validator.py  mana_curve.py  synergy.py
src/mcp_server/: __init__.py  __main__.py  server.py
src/search/: __init__.py  connection.py  embedder.py  index_builder.py  query.py  schema.py
src/ui/: action_callbacks.py  app.py  formatters.py  symbols.py
src/viewer/: __init__.py  present.py  render.py  template.html  view_model.py
tests/: conftest.py  test_setup.py
tests/fixtures/: assessment.py  benchmark_decks.py  card_data.py  combo_snapshot.py  embedder.py  scryfall_sample.json
tests/integration/: conftest.py  test_build_plugin.py  test_mcp_tools.py
tests/unit/: test_paths.py  (+1 more)
(+468 files in other folders)
