[project]
name = "artificial-planeswalker"
version = "0.1.0"
description = "MTG Arena deck-building AI assistant built with PydanticAI, integrating with Scryfall API for card lookups, deck validation, and intelligent recommendations"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Brad", email = "brad@example.com" }
]
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.69.0",
    "asyncpg>=0.30.0",
    "fastembed>=0.7.1",
    "httpx>=0.28.1",
    "ijson>=3.3.0",
    "logfire>=3.0.0",
    "mcp>=1.27.0",
    "numpy>=2.0.0",
    "openai>=1.0.0",
    "platformdirs>=4.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlite-vec>=0.1.9",
    "tenacity>=8.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
# Archived PydanticAI + Chainlit stack (see legacy/). Reference-only; NOT installed by a
# default `uv sync`. Install on demand with: uv sync --group legacy
legacy = [
    "pydantic-ai>=1.0.17",
    "chainlit>=2.8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# legacy/ is an archived (reference-only) tree — keep it out of lint/format/auto-fix
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
